<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Skyline</string>
    <string name="search">Search</string>
    <string name="error">An error has occurred</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="emulator">Emulator</string>
    <string name="enabled">Enabled</string>
    <string name="settings">Settings</string>
    <string name="share_logs">Share Logs</string>
    <string name="refresh">Refresh</string>
    <string name="log_share_prompt">Share log file</string>
    <string name="logs_not_found">No logs were created during the last run</string>
    <string name="no_nsp_selected">No NSP file selected</string>
    <string name="unknown_nsp_file">Unknown NSP file</string>
    <string name="processing_nsp">Processing NSP file…</string>
    <string name="error_processing_nsp">Error processing NSP file</string>
    <string name="error_opening_file">Error opening file</string>
    <string name="error_opening_file_picker">Could not open file picker</string>
    <string name="error_processing_file">Error processing file</string>
    <string name="error_not_an_nsp_file">Please select a valid NSP file</string>
    <string name="nsp_file_selected">NSP file selected: %1$s</string>
    <string name="invalid_file_type">Please select a valid NSP file</string>
    <string name="no_content_selected">No updates or DLC selected</string>
    <string name="update_selected">Update v%1$s</string>
    <string name="dlc_count_selected">%1$d DLC selected</string>
    <string name="update_selected_success">Update v%1$s selected successfully</string>
    <string name="dlc_selected_success">DLC \"%1$s\" selected successfully</string>
    <string name="error_no_base_game">No base game selected</string>
    <string name="error_parsing_nsp">Error parsing NSP file</string>
    <string name="error_invalid_update">This update is not compatible with the selected game</string>
    <string name="error_invalid_dlc">This DLC is not compatible with the selected game</string>
    <string name="error_unsupported_content_type">Unsupported content type. Please select an update or DLC file.</string>
    <string name="all">All</string>
    <string name="metadata_missing">Metadata Missing</string>
    <string name="icon">Icon</string>
    <string name="no_rom">Cannot find any ROMs</string>
    <string name="pin">Pin</string>
    <string name="play">Play</string>
    <string name="save_management">Save management</string>
    <string name="delete_save">Delete save</string>
    <string name="import_save">Import</string>
    <string name="export_save">Export</string>
    <string name="searching_roms">Searching for ROMs</string>
    <string name="invalid_file">Invalid file</string>
    <string name="missing_title_key">Missing title key</string>
    <string name="incomplete_prod_keys">Incomplete production keys</string>
    <string name="sparse_nca_error">This title uses Sparse NCA sections, which failed to load</string>
    <string name="compressed_nca_error">This title uses Compressed NCA sections, which failed to load</string>
    <string name="pause">Pause</string>
    <string name="mute">Mute</string>
    <string name="content">Content</string>
    <string name="open_data_directory">View Internal Directory</string>
    <string name="open_data_directory_summary">Opens Skyline\'s internal directory in a file manager</string>
    <string name="open_data_directory_failed">Cannot find an external file manager to open Skyline\'s internal directory</string>
    <string name="search_location">Search Location</string>
    <string name="manage_game_content">Manage game content</string>
    <string name="manage_game_content_summary">Manage updates and DLCs</string>
    <string name="add_update_dlc">Add Update or DLC</string>
    <string name="no_content_available">No content available</string>
    <string name="keys">Keys</string>
    <string name="prod_keys">Production Keys</string>
    <string name="title_keys">Title Keys</string>
    <string name="import_keys_success">Successfully imported keys</string>
    <string name="import_keys_invalid_input_path">The path to the provided keys is invalid</string>
    <string name="import_keys_invalid_keys">The keys you tried to import are invalid</string>
    <string name="import_keys_delete_previous_failed">Failed to delete the currently installed keys</string>
    <string name="import_keys_move_failed">Failed to move the keys to the internal directory</string>
    <string name="firmware">Firmware</string>
    <string name="import_firmware_in_progress">Installing firmware</string>
    <string name="import_firmware_success">Firmware was successfully imported</string>
    <string name="import_firmware_failure">Firmware installation failed</string>
    <string name="import_firmware_invalid_contents">The supplied firmware package does not contain a valid firmware</string>
    <string name="firmware_keys_needed">Valid keys are required for firmware installation</string>
    <string name="firmware_not_installed">No firmware installed</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="use_material_you">Use Material You</string>
    <string name="use_material_you_desc_off">Skyline colors will be used</string>
    <string name="use_material_you_desc_on">Material You will be used</string>
    <string name="app_language">App Language</string>
    <string name="app_language_default">Use System Default</string>
    <string name="layout_type">Game Display Layout</string>
    <string name="sort_apps_by">Games Sorting Order</string>
    <string name="select_action">Always Show Game Information</string>
    <string name="select_action_desc_on">Game information will be shown on clicking a game</string>
    <string name="select_action_desc_off">Game information will only be shown on long-clicking a game</string>
    <string name="filter_invalid_files_desc_off">Show files that have been parsed as invalid</string>
    <string name="filter_invalid_files_desc_on">Hide files that have been parsed as invalid</string>
    <string name="filter_invalid_files">Hide Invalid Files</string>
    <string name="game">Game</string>
    <string name="use_custom_settings">Enable Custom Settings</string>
    <string name="use_custom_settings_desc_on">Custom settings are enabled for this game</string>
    <string name="use_custom_settings_desc_off">Custom settings are disabled for this game</string>
    <string name="export_custom_settings">Export custom settings to text</string>
    <string name="export_custom_settings_desc">Copy a text with your current settings to share online</string>
    <string name="reset_custom_settings">Reset Custom Settings</string>
    <string name="reset_custom_settings_desc">Reset custom settings to the default values</string>
    <string name="reset_settings_warning">Are you sure you want to reset all settings to the default values? <b>Current settings will be lost</b></string>
    <string name="copy_global_settings">Copy Global Settings</string>
    <string name="copy_global_settings_desc">Copy global settings to this game</string>
    <string name="copy_global_settings_warning">Are you sure you want to copy global settings to this game? <b>Current settings will be lost</b></string>
    <string name="system">System</string>
    <string name="use_docked">Use Docked Mode</string>
    <string name="handheld_enabled">The system will emulate being in handheld mode</string>
    <string name="docked_enabled">The system will emulate being in docked mode</string>
    <string name="username">Username</string>
    <string name="username_default" translatable="false">@string/app_name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_picture_not_selected">No picture selected</string>
    <string name="system_language">System Language</string>
    <string name="system_region">System Region</string>
    <string name="internet">The system will be able to use internet</string>
    <string name="software_keyboard_mode">Software Keyboard</string>
    <string name="software_keyboard_mode_desc">Choose the HLE frontend or the software keyboard applet from installed firmware</string>
    <string name="display">Display</string>
    <string name="perf_stats">Show Performance Statistics</string>
    <string name="perf_stats_desc_off">Performance Statistics will not be shown</string>
    <string name="perf_stats_desc_on">Performance Statistics will be shown in the top-left corner</string>
    <string name="max_refresh_rate">Use Maximum Display Refresh Rate</string>
    <string name="max_refresh_rate_enabled">Sets the display refresh rate as high as possible (Will break most games)</string>
    <string name="max_refresh_rate_disabled">Sets the display refresh rate to 60Hz</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="respect_display_cutout">Respect Display Cutout</string>
    <string name="respect_display_cutout_enabled">Do not draw UI elements in the cutout area</string>
    <string name="respect_display_cutout_disabled">Allow UI elements to be drawn in the cutout area</string>
    <string name="enable_foldable_layout">Enable Foldable Layout</string>
    <string name="enable_foldable_layout_enabled">Folded devices will display game and controller separately</string>
    <string name="enable_foldable_layout_disabled">Display controller over games even when device is folded</string>
    <string name="show_pause_button">Show Pause Button</string>
    <string name="show_pause_button_disabled">The pause button won\'t be displayed</string>
    <string name="show_pause_button_enabled">The pause button will be displayed</string>
    <string name="audio">Audio</string>
    <string name="disable_audio_output">Disable Audio Output</string>
    <string name="disable_audio_output_enabled">Audio output is disabled</string>
    <string name="disable_audio_output_disabled">Audio output is enabled</string>
    <string name="gpu">GPU</string>
    <string name="gpu_driver_config">GPU Driver Configuration</string>
    <string name="gpu_driver_config_desc">Active driver: %1$s</string>
    <string name="gpu_driver_config_desc_unsupported">Your device doesn\'t support custom drivers</string>
    <string name="force_triple_buffering">Force Triple Buffering</string>
    <string name="triple_buffering_enabled">Utilize at least three swapchain buffers (Higher FPS but more input lag)</string>
    <string name="triple_buffering_disabled">Utilize at least two swapchain buffers (Lower FPS but less input lag)</string>
    <string name="disable_frame_throttling">Disable Frame Throttling</string>
    <string name="disable_frame_throttling_enabled">Game is allowed to submit frames as fast as possible (Only for benchmarking)\n\n<b>Note:</b> An alternative method is utilized to measure the FPS with this enabled, the figures must not be compared to throttled FPS figures</string>
    <string name="disable_frame_throttling_disabled">Only allow the game to submit frames at the display refresh rate</string>
    <string name="executor_slot_count_scale">Executor Slot Count Scale</string>
    <string name="executor_slot_count_scale_desc">Scale controlling the maximum number of simultaneous GPU executions (Higher may sometimes perform better but will use more RAM)</string>
    <string name="updates">Updates</string>
    <string name="no_updates_found">No updates found for this game</string>
    <string name="dlcs">Downloadable Content</string>
    <string name="no_dlcs_found">No DLCs found for this game</string>
    <string name="tap_to_add_updates_or_dlc">Tap + to add updates or DLC</string>
    <string name="no_content_added">No content added</string>
    <string name="add_content">Add content</string>
</resources>